# Mxchro

./: index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/key_io/: key_event.rs  keyboard.rs  keyboard_hook.rs  mod.rs
src-tauri/src/model/: key_event.rs  key_macro.rs  key_mode.rs  macro.rs  mod.rs  mode.rs
src/components/: NavBar.tsx
src/components/side_bar/: AppSideBar.tsx  SideBarItemsService.ts
src/model/: Macro.ts  Mode.ts
src/pages/: AboutPage.tsx  ContactPage.tsx  HomePage.tsx  MacroForm.tsx
src/services/: SideBarItemsService.ts
